--- a/test/index.html
+++ b/test/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <div id="fixed-table"></div>
-    <script src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.2/src/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.3/dist/index.js"></script>
     <script>
-      fixedTableInit();
+      if (window?.fixedTableInit) {
+        window?.fixedTableInit();
+      }
     </script>
 </body>
 </html>
