--- a/test/index.html
+++ b/test/index.html
@@ -2,12 +2,14 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Test</title>
+    <link rel="stylesheet" src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.6/dist/style.css">
 </head>
 <body>
-    <div id="fixed-table"></div>
-    <script src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.5/dist/style.css"></script>
-    <script src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.5/dist/index.js"></script>
+    <div style="width: 500px">
+        <div id="fixed-table"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.6/dist/index.js"></script>
     <script>
       if (window?.fixedTableInit) {
         window?.fixedTableInit();
