--- a/test/local_test.html
+++ b/test/local_test.html
@@ -10,7 +10,27 @@
     <script src="../dist/index.js"></script>
     <script>
       if (window?.fixedTableInit) {
-        window?.fixedTableInit();
+        window?.fixedTableInit(
+          "fixed-table",
+          [
+            'Name　　　　　',
+            'Gender　',
+            'Job　　　　　',
+            'Role　　　　　',
+            'Address　　　　　　　　　　',
+            'Phone　　　　　　　　　　',
+          ],
+          [
+            ['テスト 太郎1', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+            ['テスト 太郎2', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+            ['テスト 太郎3', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+            ['テスト 太郎4', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+            ['テスト 太郎5', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+            ['テスト 太郎6', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+            ['テスト 太郎7', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+            ['テスト 太郎8', '男', '自営業', 'なし', '東京都XXXXXXXXXXXX', '080-XXXX-XXXX'],
+          ]
+        );
       }
     </script>
 </body>
