--- a/test/cdn_test.html
+++ b/test/cdn_test.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table/dist/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.10/dist/style.css">
 </head>
 <body>
     <div id="fixed-table"></div>
-    <script src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table/dist/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/dmorita00/fixed-table@0.0.10/dist/index.js"></script>
     <script>
       if (window?.fixedTableInit) {
         window?.fixedTableInit();
